kubernetes/applications/immich/immich/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - immich.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: immich-server
          port: 2283
          weight: 1
